# agent-security-gate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.gateway  LICENSE  Makefile  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  docker-compose.backup.yml  docker-compose.ha.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  (+1 more)
saferemediate/: .gitignore  Makefile  README.md  pyproject.toml
saferemediate/analysis_artifacts/: b6_usability_v02_summary.json
saferemediate/analysis_artifacts/dataset_quality/: duplicate_report.json  v0.3-coverage-report.json  v0.3-duplicate-report.json  v0.3-readiness-report.json
saferemediate/analysis_artifacts/review/: agreement_report.json  dual_label_worksheet.csv
saferemediate/analysis_artifacts/v0.2/: b6_trace_audit.csv  b6_trace_audit.json
saferemediate/analysis_artifacts/v0.3/: power_analysis.json  reclassification_manifest.json  v02_pilot_rescored.csv  v02_pilot_rescored.json
saferemediate/dataset/manifests/: v0.3-episode-design-matrix.csv
saferemediate/dataset/splits/: v0.3-development.json  v0.3-held-out.json  v0.3-splits-manifest.json  v0.3-validation.json
saferemediate/dataset/templates/: episode-template.yaml  reviewer-checklist.md
saferemediate/docs/: b6-failure-analysis-v0.1.md  b6-interface-design-v0.2.md  b6-usability-study-v0.2.md  canary_protocol.md  current-research-state.md  dataset-batch-01-review.md  dataset-batch-02-review.md  dataset-batch-03-review.md  dataset-expansion-plan-v0.3.md  episode-authoring-guide.md  independent-review-instructions-v0.3.md  independent-review-protocol-v0.3.md  leakage_audit.md  live-pilot-findings-v0.1.md  local_canary_readiness.md  local_canary_setup.md  methodology.md  minicanary14_review.md  novelty_audit.md  offline_validation_milestone.md  pilot_readiness_audit.md  power-analysis-v0.3.md  precanary7_review.md  preregistration-amendment-v0.1.md  preregistration-v0.1.md  seeded_canary70_review.md  seeded_denial_implementation_report.md  statistical-analysis-plan-v0.3.md  threat-model.md  v0.2-pilot-milestone.md  v0.2-pilot-rescored-with-v0.3.md  v0.3-dataset-coverage.md  v0.3-dev-validation-study.md  v0.3-duplicate-review.md  v0.3-expanded-dataset-readiness.md  v0.3-held-out-qwen-study.md  v0.3-measurement-and-dataset-readiness.md  v0.3-qwen-1260-study.md  v0.4-b6-v03-development-plan.md  v0.4-multimodel-replication-plan.md
saferemediate/episodes/: episodes.yaml  episodes_v0.3_extra.yaml  episodes_v0.4_development.yaml
saferemediate/experiments/: saferemediate-openai-pilot-001.yaml
saferemediate/frozen/: README.md
saferemediate/frozen/v0.2-b6-usability/: README.md  canary_gate_report.json  checkpoint.jsonl  freeze_manifest.json  real_model_canary_summary.json  run_spec.yaml
saferemediate/frozen/v0.2-qwen-pilot/: checkpoint.jsonl  episode_strategy_matrix.json  pilot_integrity_analysis.json  real_model_pilot_summary.json  run_spec.yaml  seed_validation_report.json
saferemediate/review_packets/v0.3/: README.md
saferemediate/saferemediate/: __init__.py  labelling.py  run_adapter_smoke.py  run_phase0.py  run_phase1.py  run_pilot.py  validate_seed_dataset.py
saferemediate/saferemediate/analysis/: __init__.py  audit_b6_traces.py  hypotheses.py  models.py  pilot_report.py  power_analysis.py  rescore_pilot.py  review_v04.py  reviewer_agreement.py  statistics_v04.py
saferemediate/saferemediate/episodes/: __init__.py  duplicates.py  schema.py  selection.py  splits.py
saferemediate/saferemediate/experiment/: __init__.py  canary_gate.py  integrity.py  plan_validation.py  preserve_natural_canary.py  spec.py  trace_inspect.py  trace_review.py
saferemediate/scripts/: build_dev_validation_erratum_v031.py  build_dev_validation_findings.py  build_v04_development_episodes.py  calculate_reviewer_agreement.py  compare_b6_v02_v03_efficiency.py  generate_v03_episodes.py  generate_v04_review_packets.py  import_independent_review.py
saferemediate/tests/: __init__.py  conftest.py  test_b6_interface_v02.py  test_b6_interface_v03.py  test_canary_gate_b5.py  test_dataset_review_statistics_v04.py  test_episodes.py  test_execution_resilience_v04.py  test_feedback.py  test_harness.py  test_hypotheses.py  test_integrity.py  test_leakage.py  test_local_canary_labelling.py  test_local_metadata.py  test_local_provider.py  test_mock.py  test_multistep_and_splits.py  test_openai_adapter.py  test_pilot.py  test_probes.py  test_recovery_actors_v04.py  test_scoring_invariants.py  test_seed_preflight_dataset.py  test_seeded_denial.py  test_seeded_metrics_v031.py  test_tickets.py  test_trace_evidence_v04.py  test_trace_review.py  test_v03_measurement.py
(+297 files in other folders)
