[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-security-gate"
version = "0.5.0"
description = "Policy-enforced security gateway for tool-using AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = "BUSL-1.1"
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
  "psycopg[binary,pool]>=3.1.0",
  "PyJWT[crypto]>=2.8.0",
  "redis>=5.0.0",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-timeout>=2.3.0",
  "ruff>=0.6.0",
]
security = [
  "bandit>=1.9.0",
  "pip-audit>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/giselleevita/agent-security-gate"
Documentation = "https://github.com/giselleevita/agent-security-gate#readme"
Issues = "https://github.com/giselleevita/agent-security-gate/issues"

[tool.setuptools]
packages = ["adapters", "app", "approvals", "audit", "benchmark", "gateway", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: requires docker compose (gateway + OPA)",
]
